cicd-k8s/rancher/svc-rancher.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.25.102"],"port":80,"protocol":"TCP","serviceName":"cattle-system:rancher","allNodes":false},{"addresses":["192.168.25.102"],"port":443,"protocol":"TCP","serviceName":"cattle-system:rancher","allNodes":false}]'
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
  creationTimestamp: "2021-12-27T03:10:30Z"
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.6.3
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 31150
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https-internal
    nodePort: 31266
    port: 443
    protocol: TCP
    targetPort: 444
  selector:
    app: rancher
  sessionAffinity: None
  type: LoadBalancer
